# zap

./: .gitignore  CMakeLists.txt  LICENSE  README  main.c
.run/: ps7-2.run.xml  zap-2023-8748.run.xml
karel-the-robot-core/src/: karel.h
karel-the-robot-master/src/: internals.c  internals.h  karel.c  superkarel.c  superkarel.h
ps1/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c
ps2/: arrays.c  task_1.c  task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c  task_8.c  task_9.c
ps3/: hangman.c  hangman.h  main.c  morse.c  morse.h  utils.c  utils.h
ps4/: ballsortpuzzle.c  ballsortpuzzle.h  c4.c  c4.h  graphic.c  graphic.h  link.txt  main.c  printColors.h
ps5/: qr.c
ps6/: documentation-sk.md  links.txt  main.c  readme.md
ps6/life/: engine.c  engine.h  graphic.c  graphic.h
ps6/maps/: acron.txt  aircraft-carrier.txt  barge.txt  beacon.txt  bee-hive.txt  blinkers.txt  block.txt  boat.txt  figure-eight.txt  glider-eater.txt  glider.txt  gosper-glider-gun-inf.txt  gosper-glider-gun.txt  heavyweight-spaceship-HWSS.txt  light-weight-spaceship-LWSS.txt  loaf.txt  long-boat.txt  long-ship.txt  middle-weight-spaceship-MWSS.txt  penta-decathlon.txt  pond.txt  queen-bee.txt  ship.txt  simkin-glider-gun.txt  still-life-20.txt  toad.txt  tub.txt
ps6/media/: logo-as-text.txt  logo-ascii.txt  logo_60_invert.txt  logo_70x28.txt  logo_79.txt  logo_80x32.txt  text-logo-2.txt
ps6/utils/: utils.c  utils.h
ps7/: count_words.c  every_second.c
